Add subtitle to homepage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>GreenCampus Sustainability Tracker</h1>
+    <h2>Build better habits for a greener campus</h2>
     <p>Track your daily eco-friendly actions.</p>
 
     <ul>
