Add more eco actions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li>Used public transport</li>
         <li>Saved electricity</li>
         <li>Reduced plastic use</li>
+        <li>Turn off lights when not in use</li>
+        <li>Bring reusable bottle</li>
     </ul>
 </body>
 </html>
