--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>GreenCampus Sustainability Tracker</h1>
     <h2>Build better habits for a greener campus</h2>
     <p>Track your daily eco-friendly actions.</p>
+    <p><strong>Tip:</strong> Small daily actions create big environmental impact.</p>
 
     <ul>
         <li>Recycled today</li>
